# LumaLEDPiDashboard

./: AGENTS.md  README.md  app.py  config.py  display_engine.py  pyproject.toml  start_dashboard.sh
static/: style.css
templates/: index.html
