[project]
name = "led-matrix-dashboard"
version = "0.1.0"
description = "Web dashboard for Raspberry Pi LED matrix display"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0",
    "luma.core>=2.4.0",
    "luma.led-matrix",
    "spidev",
]

[project.scripts]
dashboard = "app:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["app", "config", "display_engine", "models"]

[tool.uv]
package = true
